# AI-Therapist

./: .gitignore  README.md  frontend.py  pyproject.toml  requirements.txt
backend/: auth.py  cbt.py  config.py  crisis.py  database.py  emergency.py  google_auth.py  location.py  main.py  mental_health_cards.py  therapist.py  therapist_locator.py
