[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "extra-streamlit-components>=0.1.81",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "streamlit-autorefresh>=1.0.1",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
